--- a/package.json
+++ b/package.json
@@ -3,11 +3,20 @@
   "author": "Jeff Lee <leejefon@gmail.com>",
   "version": "v1.0.0",
   "engines": {
-    "node": "8.x"
+    "node": "12.x"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-jwt": "^5.3.3",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
+    "mysql2": "^2.1.0",
+    "nodemailer": "^6.4.6",
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "sequelize": "^5.21.7",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
@@ -24,7 +33,7 @@
     "eslint-plugin-react": "^7.18.3",
     "html-webpack-plugin": "^3.2.0",
     "immutable": "^3.8.2",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "16.13.0",
     "react-dom": "16.13.0",
