--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "mysql2": "^2.1.0",
     "nodemailer": "^6.4.6",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "passport": "^0.4.1",
+    "passport-linkedin-oauth2": "^2.0.0",
     "sequelize": "^5.21.7",
     "winston": "^3.2.1"
   },
