Updated libs to latest

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 NODE_ENV=development
 JWT_SECRET=
 MYSQL_URL=
+MYSQL_DBNAME=
 
 BASE_URL=
 MAIL_FROM=
-SENDGRID_USER=
-SENDGRID_PASS=
+SENDGRID_APIKEY=
 
 LINKEDIN_CLIENT_ID=
 LINKEDIN_CLIENT_SECRET=
