--- a/package.json
+++ b/package.json
@@ -3,56 +3,56 @@
   "author": "Jeff Lee <leejefon@gmail.com>",
   "version": "v1.0.0",
   "engines": {
-    "node": "12.x"
+    "node": "16.x"
   },
   "dependencies": {
     "cookie-parser": "^1.4.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^9.0.2",
     "express": "^4.17.1",
-    "express-jwt": "^5.3.3",
+    "express-jwt": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "mysql2": "^2.1.0",
-    "nodemailer": "^6.4.6",
+    "mysql2": "^2.2.5",
+    "nodemailer": "^6.6.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "passport": "^0.4.1",
     "passport-linkedin-oauth2": "^2.0.0",
-    "sequelize": "^5.21.7",
-    "winston": "^3.2.1"
+    "sequelize": "^6.6.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
-    "@babel/preset-env": "^7.8.6",
-    "@babel/preset-react": "^7.8.3",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.6",
-    "classnames": "^2.2.6",
-    "css-loader": "^3.4.2",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.18.3",
-    "html-webpack-plugin": "^3.2.0",
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.2",
+    "@babel/preset-react": "^7.13.13",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.2",
+    "classnames": "^2.3.1",
+    "css-loader": "^5.2.5",
+    "eslint": "^7.26.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.23.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.2",
+    "html-webpack-plugin": "^5.3.1",
     "immutable": "^3.8.2",
-    "node-sass": "^4.14.1",
+    "node-sass": "^6.0.0",
     "prop-types": "^15.7.2",
-    "react": "16.13.0",
-    "react-dom": "16.13.0",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.1.2",
-    "reactstrap": "^7.1.0",
-    "redux": "^4.0.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
+    "reactstrap": "^8.9.0",
+    "redux": "^4.1.0",
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "sass-loader": "^8.0.2",
-    "style-loader": "^1.1.3",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "sass-loader": "^11.1.1",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.37.1",
+    "webpack-cli": "^4.7.0"
   },
   "scripts": {
     "start": "node index",
-    "dev": "webpack --progress --colors --watch",
-    "build": "NODE_ENV=development webpack --progress --colors"
+    "dev": "webpack --progress --watch",
+    "build": "NODE_ENV=development webpack --progress"
   }
 }
